-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u391, jfx22
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8314583 | jfx21.0.1 | Jay Bhaskar | P2 | Resolved | Fixed | b04 |
| JDK-8315557 | jfx17.0.9 | Johan Vos | P2 | Resolved | Fixed | b01 |
| JDK-8314582 | 8u401 | Jay Bhaskar | P2 | Resolved | Fixed | b01 |
| JDK-8314696 | 8u391 | Ambarish Rapte | P2 | Closed | Fixed | b08 |
Test is passing up till jdk8u391 b03. Test is failing jdk8u391 b04 onwards (and on b05, and b06 as well) after the web kit upgrade in this release.
The issue is reproducible in macos 13, macos 12, windows 10, windows 11, and OEL 8.
- backported by
-
JDK-8314582 Crash when loading cnn.com in WebView
-
- Resolved
-
-
JDK-8314583 Crash when loading cnn.com in WebView
-
- Resolved
-
-
JDK-8315557 Crash when loading cnn.com in WebView
-
- Resolved
-
-
JDK-8314696 Crash when loading cnn.com in WebView
-
- Closed
-
- relates to
-
JDK-8310681 Update WebKit to 616.1
-
- Resolved
-
- links to
-
Commit
openjdk/jfx17u/b3df5374
-
Commit
openjdk/jfx21u/f6247e42
-
Commit
openjdk/jfx/ddd1f796
-
Review
openjdk/jfx17u/143
-
Review
openjdk/jfx21u/10
-
Review(master)
openjdk/jfx/1212