8314212: Crash when loading cnn.com in WebView

Reviewed-by: kcr, hmeda